tests/typec-test/test_out/simple-spec-inheritance.txt
error: 'param0' does not implement 'A'
  --> simple-spec-inheritance/root.ctl:16:30
   |
16 | fn [T: C] sum() -> uint => T\A\a() + T\B\a()
   |                              ^^^ here
   |

error: 'param0' does not implement 'B'
  --> simple-spec-inheritance/root.ctl:16:40
   |
16 | fn [T: C] sum() -> uint => T\A\a() + T\B\a()
   |                                        ^^^ here
   |

info: tir repr of functions:
fn [] main() -> uint return {
    uint - uint(uint - uint(sum[uint](), a()), a())
}

fn [] a() -> uint return 0

fn [] a() -> uint return 1



